Add code submission

--- a/p1-lane-detection/P1.ipynb
+++ b/p1-lane-detection/P1.ipynb
@@ -65,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#importing some useful packages\n",
@@ -88,9 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#reading in an image\n",
@@ -142,12 +138,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
     "import math\n",
+    "import numpy as np\n",
+    "import os\n",
     "\n",
     "def grayscale(img):\n",
     "    \"\"\"Applies the Grayscale transform\n",
@@ -190,10 +187,11 @@
     "    \n",
     "    #returning the image only where mask pixels are nonzero\n",
     "    masked_image = cv2.bitwise_and(img, mask)\n",
+    "    \n",
     "    return masked_image\n",
     "\n",
     "\n",
-    "def draw_lines(img, lines, color=[255, 0, 0], thickness=2):\n",
+    "def draw_lines(img, lines, color=[255, 255, 0], thickness=2):\n",
     "    \"\"\"\n",
     "    NOTE: this is the function you might want to use as a starting point once you want to \n",
     "    average/extrapolate the line segments you detect to map out the full\n",
@@ -210,6 +208,7 @@
     "    If you want to make the lines semi-transparent, think about combining\n",
     "    this function with the weighted_img() function below\n",
     "    \"\"\"\n",
+    "    \n",
     "    for line in lines:\n",
     "        for x1,y1,x2,y2 in line:\n",
     "            cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
@@ -222,12 +221,74 @@
     "    \"\"\"\n",
     "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len, maxLineGap=max_line_gap)\n",
     "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
-    "    draw_lines(line_img, lines)\n",
+    "    \n",
+    "    lanes = lane_from_lines(lines, img.shape)\n",
+    "    \n",
+    "    draw_lines(line_img, lanes)\n",
     "    return line_img\n",
+    "\n",
+    "def filter_lines(lines):\n",
+    "    \"\"\"\n",
+    "    This function filters out the outliers in the hough lines output.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    slopes_mean = np.mean([line[1][1] for line in lines])\n",
+    "    slopes_std_dev = np.std([line[1][1] for line in lines])\n",
+    "    \n",
+    "    filtered_lines = []\n",
+    "    for line in lines:\n",
+    "        if (line[1][1] > slopes_mean - 2 * slopes_std_dev) and (line[1][1] < slopes_mean + 2 * slopes_std_dev):\n",
+    "            filtered_lines.append(line)\n",
+    "    return filtered_lines\n",
+    "\n",
+    "def get_slope_and_y_intercept(line):\n",
+    "    for x1,y1,x2,y2 in line:\n",
+    "        slope = (y2 - y1) / float((x2 - x1))\n",
+    "        y_intercept = y2 - slope*x2\n",
+    "\n",
+    "    return (slope, y_intercept)\n",
+    "\n",
+    "def lane_from_lines(hough_lines, image_shape):\n",
+    "    \"\"\"\n",
+    "    This function is used to approximate the left and right lanes from the hough lines.\n",
+    "    \n",
+    "    INPUTS are the hough lines and size of the image.\n",
+    "    RETURNS left and right lane lines.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    ## ( line, (slope, y_intercept) ) data structure\n",
+    "    lines = [(line, get_slope_and_y_intercept(line)) for line in hough_lines]\n",
+    "    \n",
+    "    ## Remove the outliers in the Hough lines\n",
+    "    lines = filter_lines(lines)\n",
+    "    \n",
+    "    ## Separate out left and right lane lines\n",
+    "    left_lines = [line for line in lines if (line[1][0] < 0 and line[1][0] > -0.8)]\n",
+    "    right_lines = [line for line in lines if (line[1][0] > 0 and line[1][0] < 0.8)]\n",
+    "    \n",
+    "    ## Find median of slope and y intercepts for both lanes\n",
+    "    left_y_intercept = np.median([line[1][1] for line in left_lines])\n",
+    "    left_slope = np.median([line[1][0] for line in left_lines])\n",
+    "    \n",
+    "    right_y_intercept = np.median([line[1][1] for line in right_lines])\n",
+    "    right_slope = np.median([line[1][0] for line in right_lines])\n",
+    "    \n",
+    "    ## Fit lines in the ROI\n",
+    "    left_lane = [0, \n",
+    "                 np.int32(left_y_intercept), \n",
+    "                 np.int32(-left_y_intercept/float(left_slope)), \n",
+    "                 0]\n",
+    "    \n",
+    "    right_lane = [0, \n",
+    "                  np.int32(right_y_intercept), \n",
+    "                  np.int32((image_shape[0] - right_y_intercept) / float(right_slope)), \n",
+    "                  image_shape[0]]\n",
+    "    \n",
+    "    return [[left_lane, right_lane]]\n",
     "\n",
     "# Python 3 has support for cool math symbols.\n",
     "\n",
-    "def weighted_img(img, initial_img, α=0.8, β=1., γ=0.):\n",
+    "def weighted_img(img, initial_img, alpha=0.8, beta=1., gamma=0.):\n",
     "    \"\"\"\n",
     "    `img` is the output of the hough_lines(), An image with lines drawn on it.\n",
     "    Should be a blank image (all black) with lines drawn on it.\n",
@@ -236,10 +297,10 @@
     "    \n",
     "    The result image is computed as follows:\n",
     "    \n",
-    "    initial_img * α + img * β + γ\n",
+    "    initial_img * alpha + img * beta + gamma\n",
     "    NOTE: initial_img and img must be the same shape!\n",
     "    \"\"\"\n",
-    "    return cv2.addWeighted(initial_img, α, img, β, γ)"
+    "    return cv2.addWeighted(initial_img, alpha, img, beta, gamma)"
    ]
   },
   {
@@ -255,9 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -284,13 +343,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Build your pipeline that will draw lane lines on the test_images\n",
-    "# then save them to the test_images_output directory."
+    "# then save them to the test_images_output directory.\n",
+    "\n",
+    "def pre_process(image):\n",
+    "    \n",
+    "    image = grayscale(image)\n",
+    "    \n",
+    "    ## Perform Gaussian blur\n",
+    "    gaussian_kernel_size = 3\n",
+    "    image = gaussian_blur(image, gaussian_kernel_size)\n",
+    "    \n",
+    "    return image\n",
+    "    \n",
+    "test_images_dir = os.path.abspath('./test_images')\n",
+    "\n",
+    "for image_filename in os.listdir(test_images_dir):\n",
+    "    image_file_path = os.path.join(test_images_dir, image_filename)\n",
+    "    if not os.path.isfile(image_file_path):\n",
+    "        continue\n",
+    "\n",
+    "    image = cv2.imread(image_file_path)\n",
+    "    image_shape = image.shape\n",
+    "\n",
+    "    ## Perform required pre-processing on the image\n",
+    "    pre_processed_image = pre_process(image)\n",
+    "    \n",
+    "    ## Find Canny edges\n",
+    "    low_threshold = 50\n",
+    "    high_threshold = 150\n",
+    "    edges = canny(pre_processed_image, low_threshold, high_threshold)\n",
+    "\n",
+    "    ## Mask edge image with the required polygon\n",
+    "    vertices = np.array([[\n",
+    "        (0,image_shape[0]),\n",
+    "        (460, 320), \n",
+    "        (510, 320), \n",
+    "        (image_shape[1],image_shape[0])]],\n",
+    "            dtype=np.int32)\n",
+    "    masked_edges = region_of_interest(edges, vertices)\n",
+    "    \n",
+    "    ## Perform Hough transform to find lane lines in the masked image\n",
+    "    rho = 1\n",
+    "    theta = np.pi/180\n",
+    "    threshold = 50\n",
+    "    min_line_length = 30\n",
+    "    max_line_gap = 10\n",
+    "    hough_lines_mask = hough_lines(masked_edges, rho, theta, threshold, min_line_length, max_line_gap)\n",
+    "    lane_lines_roi = region_of_interest(hough_lines_mask, vertices)\n",
+    "    hough_lines_in_image = weighted_img(lane_lines_roi, image, alpha=0.8, beta=1., gamma=0.)\n",
+    "    \n",
+    "    output_images_path = os.path.join(os.path.dirname(image_file_path), 'output')\n",
+    "    if not os.path.exists(output_images_path):\n",
+    "        os.mkdir(output_images_path)\n",
+    "        \n",
+    "    output_image_file_path = os.path.join(output_images_path, image_filename)\n",
+    "    cv2.imwrite(output_image_file_path, hough_lines_in_image)\n",
+    "    cv2.imwrite(output_image_file_path + '.masked.jpg', masked_edges)"
    ]
   },
   {
@@ -321,9 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import everything needed to edit/save/watch video clips\n",
@@ -334,16 +444,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def process_image(image):\n",
     "    # NOTE: The output you return should be a color image (3 channel) for processing video below\n",
     "    # TODO: put your pipeline here,\n",
     "    # you should return the final output (image where lines are drawn on lanes)\n",
+    "    \n",
+    "    image_shape = image.shape\n",
     "\n",
+    "    ## Perform required pre-processing on the image\n",
+    "    pre_processed_image = pre_process(image)\n",
+    "    \n",
+    "    ## Find Canny edges\n",
+    "    low_threshold = 50\n",
+    "    high_threshold = 150\n",
+    "    edges = canny(pre_processed_image, low_threshold, high_threshold)\n",
+    "\n",
+    "    ## Mask edge image with the required polygon\n",
+    "    vertices = np.array([[\n",
+    "        (0,image_shape[0]),\n",
+    "        (460, 320), \n",
+    "        (510, 320), \n",
+    "        (image_shape[1],image_shape[0])]],\n",
+    "            dtype=np.int32)\n",
+    "    masked_edges = region_of_interest(edges, vertices)\n",
+    "    \n",
+    "    ## Perform Hough transform to find lane lines in the masked image\n",
+    "    rho = 1\n",
+    "    theta = np.pi/180\n",
+    "    threshold = 50\n",
+    "    min_line_length = 30\n",
+    "    max_line_gap = 10\n",
+    "    hough_lines_mask = hough_lines(masked_edges, rho, theta, threshold, min_line_length, max_line_gap)\n",
+    "    lane_lines_mask = region_of_interest(hough_lines_mask, vertices)\n",
+    "    result = weighted_img(lane_lines_mask, image, alpha=0.8, beta=1., gamma=0.)\n",
+    "    \n",
     "    return result"
    ]
   },
@@ -357,9 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "white_output = 'test_videos_output/solidWhiteRight.mp4'\n",
@@ -383,9 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "HTML(\"\"\"\n",
@@ -416,9 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "yellow_output = 'test_videos_output/solidYellowLeft.mp4'\n",
@@ -435,9 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "HTML(\"\"\"\n",
@@ -470,9 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "challenge_output = 'test_videos_output/challenge.mp4'\n",
@@ -489,9 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "HTML(\"\"\"\n",
@@ -505,23 +630,23 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
