--- a/p1-lane-detection/P1.ipynb
+++ b/p1-lane-detection/P1.ipynb
@@ -156,7 +156,7 @@
     "    # Or use BGR2GRAY if you read an image with cv2.imread()\n",
     "    # return cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
     "    \n",
-    "def canny(img, low_threshold, high_threshold):\n",
+    "def canny(img, low_threshold=50, high_threshold=150):\n",
     "    \"\"\"Applies the Canny transform\"\"\"\n",
     "    return cv2.Canny(img, low_threshold, high_threshold)\n",
     "\n",
@@ -191,7 +191,7 @@
     "    return masked_image\n",
     "\n",
     "\n",
-    "def draw_lines(img, lines, color=[255, 255, 0], thickness=2):\n",
+    "def draw_lines(img, lines, color=[255, 255, 255], thickness=2):\n",
     "    \"\"\"\n",
     "    NOTE: this is the function you might want to use as a starting point once you want to \n",
     "    average/extrapolate the line segments you detect to map out the full\n",
@@ -213,6 +213,21 @@
     "        for x1,y1,x2,y2 in line:\n",
     "            cv2.line(img, (x1, y1), (x2, y2), color, thickness)\n",
     "\n",
+    "\n",
+    "def detect_lanes(image, rho=1, theta=np.pi/180, threshold=50, min_line_length=30, max_line_gap=10):\n",
+    "    \"\"\"Detect lanes using Hough transform and subsequent averaging and extrapolation of Hough lines.\"\"\"\n",
+    "    \n",
+    "    ## Perform Hough transform to find lane lines in the masked image\n",
+    "    lines = hough_lines(image, rho, theta, threshold, min_line_length, max_line_gap)\n",
+    "    \n",
+    "    lanes = lane_from_lines(lines, image.shape)\n",
+    "    \n",
+    "    lane_image = np.zeros((image.shape[0], image.shape[1], 3), dtype=np.uint8)\n",
+    "    draw_lines(lane_image, lanes)\n",
+    "    \n",
+    "    return lane_image\n",
+    "    \n",
+    "    \n",
     "def hough_lines(img, rho, theta, threshold, min_line_len, max_line_gap):\n",
     "    \"\"\"\n",
     "    `img` should be the output of a Canny transform.\n",
@@ -220,17 +235,12 @@
     "    Returns an image with hough lines drawn.\n",
     "    \"\"\"\n",
     "    lines = cv2.HoughLinesP(img, rho, theta, threshold, np.array([]), minLineLength=min_line_len, maxLineGap=max_line_gap)\n",
-    "    line_img = np.zeros((img.shape[0], img.shape[1], 3), dtype=np.uint8)\n",
     "    \n",
-    "    lanes = lane_from_lines(lines, img.shape)\n",
-    "    \n",
-    "    draw_lines(line_img, lanes)\n",
-    "    return line_img\n",
+    "    return lines\n",
+    "\n",
     "\n",
     "def filter_lines(lines):\n",
-    "    \"\"\"\n",
-    "    This function filters out the outliers in the hough lines output.\n",
-    "    \"\"\"\n",
+    "    \"\"\"Filter out the outliers in the hough lines output.\"\"\"\n",
     "    \n",
     "    slopes_mean = np.mean([line[1][1] for line in lines])\n",
     "    slopes_std_dev = np.std([line[1][1] for line in lines])\n",
@@ -241,12 +251,15 @@
     "            filtered_lines.append(line)\n",
     "    return filtered_lines\n",
     "\n",
+    "\n",
     "def get_slope_and_y_intercept(line):\n",
+    "    \"\"\"Returns slope and y-intercept of the input line.\"\"\"\n",
     "    for x1,y1,x2,y2 in line:\n",
     "        slope = (y2 - y1) / float((x2 - x1))\n",
     "        y_intercept = y2 - slope*x2\n",
     "\n",
     "    return (slope, y_intercept)\n",
+    "\n",
     "\n",
     "def lane_from_lines(hough_lines, image_shape):\n",
     "    \"\"\"\n",
@@ -286,7 +299,6 @@
     "    \n",
     "    return [[left_lane, right_lane]]\n",
     "\n",
-    "# Python 3 has support for cool math symbols.\n",
     "\n",
     "def weighted_img(img, initial_img, alpha=0.8, beta=1., gamma=0.):\n",
     "    \"\"\"\n",
@@ -371,7 +383,7 @@
     "\n",
     "    ## Perform required pre-processing on the image\n",
     "    pre_processed_image = pre_process(image)\n",
-    "    \n",
+    "\n",
     "    ## Find Canny edges\n",
     "    low_threshold = 50\n",
     "    high_threshold = 150\n",
@@ -386,23 +398,17 @@
     "            dtype=np.int32)\n",
     "    masked_edges = region_of_interest(edges, vertices)\n",
     "    \n",
-    "    ## Perform Hough transform to find lane lines in the masked image\n",
-    "    rho = 1\n",
-    "    theta = np.pi/180\n",
-    "    threshold = 50\n",
-    "    min_line_length = 30\n",
-    "    max_line_gap = 10\n",
-    "    hough_lines_mask = hough_lines(masked_edges, rho, theta, threshold, min_line_length, max_line_gap)\n",
-    "    lane_lines_roi = region_of_interest(hough_lines_mask, vertices)\n",
-    "    hough_lines_in_image = weighted_img(lane_lines_roi, image, alpha=0.8, beta=1., gamma=0.)\n",
+    "    lane_mask = detect_lanes(masked_edges)\n",
     "    \n",
-    "    output_images_path = os.path.join(os.path.dirname(image_file_path), 'output')\n",
+    "    lane_mask_roi = region_of_interest(lane_mask, vertices)\n",
+    "    lane_image = weighted_img(lane_mask_roi, image, alpha=0.8, beta=1., gamma=0.)\n",
+    "    \n",
+    "    output_images_path = os.path.join(os.path.dirname(os.path.dirname(image_file_path)), 'test_images_output')\n",
     "    if not os.path.exists(output_images_path):\n",
     "        os.mkdir(output_images_path)\n",
     "        \n",
     "    output_image_file_path = os.path.join(output_images_path, image_filename)\n",
-    "    cv2.imwrite(output_image_file_path, hough_lines_in_image)\n",
-    "    cv2.imwrite(output_image_file_path + '.masked.jpg', masked_edges)"
+    "    cv2.imwrite(output_image_file_path, lane_image)"
    ]
   },
   {
@@ -458,9 +464,7 @@
     "    pre_processed_image = pre_process(image)\n",
     "    \n",
     "    ## Find Canny edges\n",
-    "    low_threshold = 50\n",
-    "    high_threshold = 150\n",
-    "    edges = canny(pre_processed_image, low_threshold, high_threshold)\n",
+    "    edges = canny(pre_processed_image)\n",
     "\n",
     "    ## Mask edge image with the required polygon\n",
     "    vertices = np.array([[\n",
@@ -472,12 +476,7 @@
     "    masked_edges = region_of_interest(edges, vertices)\n",
     "    \n",
     "    ## Perform Hough transform to find lane lines in the masked image\n",
-    "    rho = 1\n",
-    "    theta = np.pi/180\n",
-    "    threshold = 50\n",
-    "    min_line_length = 30\n",
-    "    max_line_gap = 10\n",
-    "    hough_lines_mask = hough_lines(masked_edges, rho, theta, threshold, min_line_length, max_line_gap)\n",
+    "    hough_lines_mask = detect_lanes(masked_edges)\n",
     "    lane_lines_mask = region_of_interest(hough_lines_mask, vertices)\n",
     "    result = weighted_img(lane_lines_mask, image, alpha=0.8, beta=1., gamma=0.)\n",
     "    \n",
